# security-checker

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  SPEC.md  pyproject.toml
.cursor/rules/: approval-policy.mdc  checkpoint-constraints.mdc  implementation-style.mdc  pr-prep.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: checkpoint.md
.github/workflows/: ci.yml  pr-invariants.yml  security-scan.yml
docs/: ai_role_split.md  app_migration_plan.md  checkpoint_state_machine.md  claude_checkpoint_workflow.md  foundation_boundary.md  foundation_repo_extraction_plan.md  template_usage_guide.md
scripts/: check_pr_invariants.py
src/repo_security_checker/: cli.py  models.py  report.py
src/repo_security_checker/scanners/: __init__.py  bandit_runner.py  base.py  gitleaks_runner.py  pipaudit_runner.py
tests/: test_bandit_runner.py  test_check_pr_invariants.py  test_cli.py  test_gitleaks_runner.py  test_models.py  test_pipaudit_runner.py  test_report.py
